FIX Geographical search - results area was missing spacing
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10371 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1325,6 +1325,7 @@ a.Enabled, a:visited.Enabled {
 .ReportMetric {font-size:200%;padding-left:5px;}
 .ReportAddToDash {font-size:65%;}
 
+#modal #CentralSpaceResources {padding:20px;} /* extra spacing needed when results displayed in a modal - e.g. geographical search */
 
 
 
